# SESL

./: CMakeLists.txt
apps/: package-lock.json  package.json
apps/cereal/: index.html  package-lock.json  package.json  tsconfig.json
apps/cereal/src/: App.css  App.tsx  main.tsx
apps/cereal/src-tauri/: Cargo.toml  gen_icons.sh  tauri.conf.json
apps/cereal/src-tauri/icons/: icon.icns
apps/cereal/src-tauri/serial_manager/: cargo.toml
apps/cereal/src-tauri/serial_manager/src/: discovery.rs  lib.rs  manager.rs
apps/cereal/src-tauri/src/: lib.rs  main.rs  serial.rs
apps/cereal/src-tauri/src/SerialManager/: discovery.rs  lib.rs  mod.rs
apps/cereal/src/components/custom/: ConnectionSettings.tsx  LogViewer.tsx  SerialDashboard.tsx  SerialPortList.tsx  SerialTerminal.tsx  navigation.tsx
apps/uscope/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
apps/uscope/src/: App.css  App.tsx  main.tsx
apps/uscope/src-tauri/: Cargo.toml  tauri.conf.json
apps/uscope/src-tauri/src/: discovery.rs  lib.rs  main.rs
apps/uscope/src/components/custom/: FlexLayout.ts  LogViewer.tsx  TestLine.ts  cards.tsx  navigation.tsx  pixiapp.tsx  pixigraph.tsx  pixitest.tsx  (+1 more)
apps/uscope/src/hooks/: useAsyncEffect.ts  useTheme.ts
openai/: pyproject.toml
openai/helper/: main.py
src/: se_observe.c  se_observe.h  se_proto.c  se_proto.h  telemetry.proto
src/ringbuf/: se_ringbuf.c  se_ringbuf.h  se_ringbuf_internal.h  se_ringbuf_observer.h
test/: test_all.c  test_se_ringbuf.c  test_se_ringbuf_observer.c
tools/: main.py  pyproject.toml
(+5 files in other folders)
