[project]
name = "tools"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrew Shelley",email = "andrewjohnshelley@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai (>=1.84.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "tools", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
